<resources>
    <string name="app_name">Marvel Comics</string>
    <string name="splash">Splash</string>
    <string name="headerlogo">Header Logo</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up</string>
    <string name="login">Login</string>
    <string name="reset">Reset Password</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="repassword">Re-Password</string>
    <string name="username">LoginID</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="enter_api_username">Enter API UserName:</string>
    <string name="admin123">admin123</string>
    <string name="api_url">http://10.0.1.247/MarvelComics/api/</string>
    <string name="enter_api_password">Enter API Password:</string>
    <string name="admin">admin</string>
    <string name="enter_api_server">Enter API Server:</string>
    <string name="configurations">Configurations</string>
    <string name="save_settings">Save Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_about">About us</string>
    <string name="menu_help">Help</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_changepwd">Change Password</string>
    <string name="menu_send">Send</string>
    <string name="menu_series">Series</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_trailers">Trailors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>