<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="villa.usman.marvelcomics.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_series"
        android:name="villa.usman.marvelcomics.ui.series.SeriesFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/nav_movies"
        android:name="villa.usman.marvelcomics.ui.movies.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_characters"
        android:name="villa.usman.marvelcomics.ui.characters.CharactersFragment"
        android:label="@string/menu_characters"
        tools:layout="@layout/fragment_characters" />

    <fragment
        android:id="@+id/nav_photos"
        android:name="villa.usman.marvelcomics.ui.photos.PhotosFragment"
        android:label="@string/menu_photos"
        tools:layout="@layout/fragment_photos" />

    <fragment
        android:id="@+id/nav_channels"
        android:name="villa.usman.marvelcomics.ui.channels.ChannelsFragment"
        android:label="@string/menu_channels"
        tools:layout="@layout/fragment_channels" />

    <fragment
        android:id="@+id/nav_trailers"
        android:name="villa.usman.marvelcomics.ui.trailors.TrailorsFragment"
        android:label="@string/menu_trailers"
        tools:layout="@layout/fragment_trailors" />

    <fragment
        android:id="@+id/nav_about"
        android:name="villa.usman.marvelcomics.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="villa.usman.marvelcomics.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_help"
        android:name="villa.usman.marvelcomics.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_pwd"
        android:name="villa.usman.marvelcomics.ui.pwd.PasswordFragment"
        android:label="@string/menu_changepwd"
        tools:layout="@layout/fragment_pwd" />

    <fragment
        android:id="@+id/logout"
        android:name="villa.usman.marvelcomics.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
</navigation>