<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2EF"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/settings"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2EF"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/tv_APIServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/enter_api_server" />

            <EditText
                android:id="@+id/et_APIServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/api_url"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_APIUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/enter_api_username" />

            <EditText
                android:id="@+id/et_APIUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/admin"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_APIPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/enter_api_password" />

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/admin123"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnSave"
                android:background="@drawable/box"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:padding="@dimen/small_margin"
                android:text="@string/save_settings" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>