<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2EF"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2EF"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/currentpassword"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnChangePwd"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:padding="@dimen/small_margin"
                android:text="@string/menu_changepwd" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/SpinKitView.Large.CubeGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>