<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/silver"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/logo" />

            <!-- Email Label -->

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <!-- Password Label -->

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnLogin"
                android:background="@drawable/box"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:padding="@dimen/small_margin"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                android:gravity="center"
                android:text="@string/not_a_member_sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/ts_standard" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/SpinKitView.Large.CubeGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>